# browser-terminal

./: .gitignore  Cargo.toml  README.md  justfile  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: pages.yml
crates/bterm-cli/: Cargo.toml
crates/bterm-cli/src/: main.rs
crates/bterm-core/: Cargo.toml
crates/bterm-core/src/: abort.rs  ast.rs  callable.rs  chan.rs  editor.rs  engine.rs  error.rs  eval.rs  expr.rs  lex.rs  lib.rs  matcher.rs  parse.rs  pipeline.rs  protocol.rs  registry.rs  signature.rs  sink.rs  value.rs
crates/bterm-core/src/builtins/: mod.rs
crates/bterm-core/src/mux/: keys.rs  mod.rs
crates/bterm-core/src/render/: mod.rs
crates/bterm-wasm/: Cargo.toml
crates/bterm-wasm/src/: convert.rs  js_command.rs  js_fn.rs  js_regex.rs  lib.rs  tasks.rs
crates/bterm-wasm/tests/: boundary.rs
docs/superpowers/plans/: 2026-07-23-output-channels-stage-1.md  2026-07-24-streaming-stage-2-transport.md
docs/superpowers/specs/: 2026-07-16-browser-terminal-design.md  2026-07-23-output-channels-and-streaming-design.md
scripts/: verify-site.mjs
site/: index.html
