[package]
name = "bterm-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bterm-core = { path = "../bterm-core" }
# Pinned exactly: must match the installed wasm-bindgen CLI version.
wasm-bindgen = "=0.2.126"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"

[lints.clippy]
unwrap_used = "deny"
